# qdvc

./: .coveragerc  AUTHORS.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/: conf.py  index.rst
src/qdvc/: config.py  config_schema.py  exceptions.py  skeleton.py
src/qdvc/cli/: __init__.py  command.py  completion.py  main.py  parser.py  utils.py
src/qdvc/commands/: add.py  checkout.py  commit.py  init.py  query.py
src/qdvc/repo/: __init__.py  add.py  checkout.py  commit.py  githelper.py  init.py  query.py
src/qdvc/resources/: filter_skeletton.py
tests/: conftest.py  test_skeleton.py
